// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectTag field > Tags should display readOnly tags list 1`] = `
<div
  className="tags"
>
  <Translate(Badge)
    label="toto"
  />
  <Translate(Badge)
    label="lol"
  />
  <Translate(Badge)
    label="tata"
  />
</div>
`;

exports[`MultiSelectTag field > Tags should display tags list 1`] = `
<div
  className="tags"
>
  <Translate(Badge)
    label="toto"
    onDelete={[Function]}
  />
  <Translate(Badge)
    label="lol"
    onDelete={[Function]}
  />
  <Translate(Badge)
    label="tata"
    onDelete={[Function]}
  />
</div>
`;
